release/0.10/_sources/examples/00-fluent/mixing_elbow_settings_api.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-fluent/mixing_elbow_settings_api.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_00-fluent_mixing_elbow_settings_api.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-fluent_mixing_elbow_settings_api.py:

.. _ref_mixing_elbow_settings_api_beta:

Fluent Setup and Solution using Settings Objects
------------------------------------------------
This example illustrates the setup and solution of a three-dimensional
turbulent fluid flow and heat transfer problem in a mixing elbow. The mixing
elbow configuration is encountered in piping systems in power plants and
process industries. It is often important to predict the flow field and
temperature field in the area of the mixing region in order to properly design
the junction.

This example demonstrates use of 'settings' modules (Beta)

- Launch Ansys Fluent
- Import Mesh
- Define Material
- Setup Cell Zone Conditions
- Setup Boundary Conditions
- Initialize and Solve
- Compute Mass Flow Rate and Temperature

Problem Description:
A cold fluid at 20 deg C flows into the pipe through a large inlet, and mixes
with a warmer fluid at 40 deg C that enters through a smaller inlet located at
the elbow. The pipe dimensions are in inches and the fluid properties and
boundary conditions are given in SI units. The Reynolds number for the flow at
the larger inlet is 50, 800, so a turbulent flow model will be required.

.. GENERATED FROM PYTHON SOURCE LINES 29-30

.. code-block:: default

    # sphinx_gallery_thumbnail_path = '_static/mixing_elbow_settings.png'







.. GENERATED FROM PYTHON SOURCE LINES 31-33

First, download the mesh file and start Fluent as a service with
Solver Mode, Double Precision, Number of Processors 2

.. GENERATED FROM PYTHON SOURCE LINES 33-40

.. code-block:: default


    import ansys.fluent.core as pyfluent
    from ansys.fluent.core import examples

    import_filename = examples.download_file("mixing_elbow.msh.h5", "pyfluent/mixing_elbow")

    session = pyfluent.launch_fluent(precision="double", processor_count=2)







.. GENERATED FROM PYTHON SOURCE LINES 41-47

Import mesh and perform mesh check:
The mesh check will list the minimum and maximum x, y, and z values from the
mesh in the default SI unit of meters. It will also report a number of other
mesh features that are checked. Any errors in the mesh will be reported at
this time. Ensure that the minimum volume is not negative, since Ansys Fluent
cannot begin a calculation when this is the case.

.. GENERATED FROM PYTHON SOURCE LINES 47-51

.. code-block:: default


    session.solver.root.file.read(file_type="case", file_name=import_filename)
    session.solver.tui.mesh.check()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Fast-loading "/ansys_inc/v222/fluent/fluent22.2.0/addons/afd/lib/hdfio.bin"
    Done.

    Reading from 3d80d89d037f:"/home/ansys/.local/share/ansys_fluent_core/examples/mixing_elbow.msh.h5" in NODE0 mode ...
      Reading mesh ...
           17822 cells,     1 cell zone  ...
              17822 mixed cells,  zone id: 87
           91581 faces,     7 face zones ...
               2168 polygonal wall faces,  zone id: 34
                268 polygonal wall faces,  zone id: 33
                155 polygonal pressure-outlet faces,  zone id: 32
                152 polygonal velocity-inlet faces,  zone id: 31
                 55 polygonal velocity-inlet faces,  zone id: 30
               2001 polygonal symmetry faces,  zone id: 29
              86782 mixed interior faces,  zone id: 89
           66417 nodes,     3 node zones ...

    Building...
         mesh
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 8663/269 = 32.2045
         materials,
         interface,
         domains,
         zones,
            Skipping thread 20 of domain 1 (not referenced by grid).
            Skipping thread 21 of domain 1 (not referenced by grid).
            Skipping thread 22 of domain 1 (not referenced by grid).
            Skipping thread 23 of domain 1 (not referenced by grid).
            Skipping thread 24 of domain 1 (not referenced by grid).
            Skipping thread 25 of domain 1 (not referenced by grid).
            Skipping thread 26 of domain 1 (not referenced by grid).
            Skipping thread 27 of domain 1 (not referenced by grid).
            Skipping thread 28 of domain 1 (not referenced by grid).
            wall-elbow
            wall-inlet
            outlet
            cold-inlet
            hot-inlet
            symmetry-xyplane
            interior--elbow-fluid
            elbow-fluid
         parallel,
    Done.
    Mesh is now scaled to meters.

     Domain Extents:
       x-coordinate: min (m) = -2.000000e-01, max (m) = 2.000000e-01
       y-coordinate: min (m) = -2.250000e-01, max (m) = 2.000000e-01
       z-coordinate: min (m) = 0.000000e+00, max (m) = 4.992264e-02
     Volume statistics:
       minimum volume (m3): 2.443789e-10
       maximum volume (m3): 5.720378e-07
         total volume (m3): 2.500657e-03
     Face area statistics:
       minimum face area (m2): 3.226185e-08
       maximum face area (m2): 7.873458e-05
     Checking mesh.....................................
    Done.

    Note: Settings to improve the robustness of pathline and
          particle tracking have been automatically enabled.





.. GENERATED FROM PYTHON SOURCE LINES 52-58

Set the working units for the mesh:
select "in" to set inches as the working unit for length. Note:  Because the
default SI units will be used for everything except length, there is no need
to change any other units in this problem. If you want a different working
unit for length, other than inches (for example, millimeters), make the
appropriate change.

.. GENERATED FROM PYTHON SOURCE LINES 58-61

.. code-block:: default


    session.solver.tui.define.units("length", "in")








.. GENERATED FROM PYTHON SOURCE LINES 62-63

Enable heat transfer by activating the energy equation.

.. GENERATED FROM PYTHON SOURCE LINES 63-66

.. code-block:: default


    session.solver.root.setup.models.energy.enabled = True








.. GENERATED FROM PYTHON SOURCE LINES 67-68

Create a new material called water-liquid.

.. GENERATED FROM PYTHON SOURCE LINES 68-73

.. code-block:: default


    session.solver.root.setup.materials.copy_database_material_by_name(
        type="fluid", name="water-liquid"
    )





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    False



.. GENERATED FROM PYTHON SOURCE LINES 74-76

Set up the cell zone conditions for the fluid zone (elbow-fluid). Select
water-liquid from the Material list.

.. GENERATED FROM PYTHON SOURCE LINES 76-81

.. code-block:: default


    session.solver.root.setup.cell_zone_conditions.fluid[
        "elbow-fluid"
    ].material = "water-liquid"





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

 
    water-liquid copied from database.





.. GENERATED FROM PYTHON SOURCE LINES 82-91

Set up the boundary conditions for the inlets, outlet, and walls for your CFD
analysis.
cold inlet (cold-inlet), Setting: Value:
Velocity Specification Method: Magnitude, Normal to Boundary
Velocity Magnitude: 0.4 [m/s]
Specification Method: Intensity and Hydraulic Diameter
Turbulent Intensity: 5 [%]
Hydraulic Diameter: 4 [inch]
Temperature: 293.15 [K]

.. GENERATED FROM PYTHON SOURCE LINES 91-110

.. code-block:: default


    session.solver.root.setup.boundary_conditions.velocity_inlet["cold-inlet"].vmag = {
        "option": "constant or expression",
        "constant": 0.4,
    }
    session.solver.root.setup.boundary_conditions.velocity_inlet[
        "cold-inlet"
    ].ke_spec = "Intensity and Hydraulic Diameter"
    session.solver.root.setup.boundary_conditions.velocity_inlet[
        "cold-inlet"
    ].turb_intensity = 5
    session.solver.root.setup.boundary_conditions.velocity_inlet[
        "cold-inlet"
    ].turb_hydraulic_diam = "4 [in]"
    session.solver.root.setup.boundary_conditions.velocity_inlet["cold-inlet"].t = {
        "option": "constant or expression",
        "constant": 293.15,
    }








.. GENERATED FROM PYTHON SOURCE LINES 111-118

hot inlet (hot-inlet), Setting: Value:
Velocity Specification Method: Magnitude, Normal to Boundary
Velocity Magnitude: 1.2 [m/s]
Specification Method: Intensity and Hydraulic Diameter
Turbulent Intensity: 5 [%]
Hydraulic Diameter: 1 [inch]
Temperature: 313.15 [K]

.. GENERATED FROM PYTHON SOURCE LINES 118-134

.. code-block:: default


    session.solver.root.setup.boundary_conditions.velocity_inlet["hot-inlet"].vmag = {
        "option": "constant or expression",
        "constant": 1.2,
    }
    session.solver.root.setup.boundary_conditions.velocity_inlet[
        "hot-inlet"
    ].ke_spec = "Intensity and Hydraulic Diameter"
    session.solver.root.setup.boundary_conditions.velocity_inlet[
        "hot-inlet"
    ].turb_hydraulic_diam = "1 [in]"
    session.solver.root.setup.boundary_conditions.velocity_inlet["hot-inlet"].t = {
        "option": "constant or expression",
        "constant": 313.15,
    }








.. GENERATED FROM PYTHON SOURCE LINES 135-138

pressure outlet (outlet), Setting: Value:
Backflow Turbulent Intensity: 5 [%]
Backflow Turbulent Viscosity Ratio: 4

.. GENERATED FROM PYTHON SOURCE LINES 138-143

.. code-block:: default


    session.solver.root.setup.boundary_conditions.pressure_outlet[
        "outlet"
    ].turb_viscosity_ratio = 4








.. GENERATED FROM PYTHON SOURCE LINES 144-145

Disable the plotting of residuals during the calculation.

.. GENERATED FROM PYTHON SOURCE LINES 145-148

.. code-block:: default


    session.solver.tui.solve.monitors.residual.plot("no")








.. GENERATED FROM PYTHON SOURCE LINES 149-150

Initialize the flow field using the Hybrid Initialization

.. GENERATED FROM PYTHON SOURCE LINES 150-153

.. code-block:: default


    session.solver.root.solution.initialization.hybrid_initialize()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Initialize using the hybrid initialization method.

    Checking case topology... 
    -This case has both inlets & outlets 
    -Pressure information is not available at the boundaries.
     Case will be initialized with constant pressure

            iter            scalar-0

            1               1.000000e+00
            2               1.760484e-04
            3               1.013953e-05
            4               8.441202e-06
            5               1.691978e-06
            6               1.891713e-06
            7               3.419223e-07
            8               3.569689e-07
            9               7.704952e-08
            10              6.985953e-08

    Hybrid initialization is done.




.. GENERATED FROM PYTHON SOURCE LINES 154-155

Solve for 150 Iterations.

.. GENERATED FROM PYTHON SOURCE LINES 155-159

.. code-block:: default


    session.solver.root.solution.run_calculation.iterate.get_attr("arguments")
    session.solver.root.solution.run_calculation.iterate(number_of_iterations=150)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
         1  1.0000e+00  1.2702e-03  1.3542e-03  8.4497e-04  4.5806e-05  5.5712e-02  1.3772e+00  0:00:35  149
         2  1.0000e+00  3.0246e-03  3.3617e-03  1.1618e-03  3.6419e-05  3.2045e-01  3.1590e-01  0:00:35  148
         3  9.6665e-01  2.4809e-03  2.9365e-03  9.4563e-04  4.8054e-05  2.5998e-01  3.0693e-01  0:00:34  147
         4  8.8102e-01  1.9413e-03  2.4430e-03  7.3704e-04  6.4805e-05  1.5911e-01  2.7563e-01  0:00:33  146
         5  7.2202e-01  1.4762e-03  2.0337e-03  5.8466e-04  7.9093e-05  7.6570e-02  2.2849e-01  0:00:32  145
         6  5.7732e-01  1.1379e-03  1.7075e-03  4.8819e-04  8.6993e-05  4.0714e-02  1.7395e-01  0:00:32  144
         7  4.5487e-01  9.3005e-04  1.4959e-03  4.3726e-04  8.8209e-05  2.4887e-02  1.2231e-01  0:00:31  143
         8  3.6132e-01  8.1436e-04  1.3776e-03  3.9574e-04  8.3765e-05  1.6749e-02  8.0508e-02  0:00:30  142
         9  2.9258e-01  7.6778e-04  1.2590e-03  3.5405e-04  7.5224e-05  1.0934e-02  5.1488e-02  0:00:30  141
        10  2.4942e-01  7.5215e-04  1.1387e-03  3.1588e-04  6.6154e-05  7.2673e-03  3.3244e-02  0:00:29  140
        11  2.1716e-01  7.2816e-04  1.0257e-03  2.8276e-04  5.7149e-05  4.8331e-03  2.2922e-02  0:00:29  139

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        12  1.9168e-01  6.9102e-04  9.2244e-04  2.5520e-04  4.9079e-05  3.7512e-03  1.6464e-02  0:00:28  138
        13  1.7174e-01  6.3896e-04  8.3197e-04  2.3408e-04  4.1972e-05  3.3494e-03  1.3828e-02  0:00:28  137
        14  1.5581e-01  5.8139e-04  7.5348e-04  2.1611e-04  3.5648e-05  3.1629e-03  1.1839e-02  0:00:28  136
        15  1.4232e-01  5.2340e-04  6.8555e-04  2.0080e-04  3.0309e-05  3.0613e-03  1.1780e-02  0:00:27  135
        16  1.3056e-01  4.7199e-04  6.3030e-04  1.8824e-04  2.5948e-05  2.9543e-03  1.0271e-02  0:00:27  134
        17  1.1984e-01  4.2539e-04  5.7806e-04  1.7692e-04  2.2403e-05  2.9177e-03  1.0764e-02  0:00:27  133
        18  1.1002e-01  3.8881e-04  5.3137e-04  1.6738e-04  1.9688e-05  2.8097e-03  9.4051e-03  0:00:27  132
        19  1.0118e-01  3.5872e-04  4.8704e-04  1.5793e-04  1.7524e-05  2.8595e-03  1.0319e-02  0:00:26  131
        20  9.5305e-02  3.3418e-04  4.4591e-04  1.4979e-04  1.5834e-05  2.7573e-03  9.0782e-03  0:00:26  130
        21  9.1970e-02  3.0968e-04  4.0734e-04  1.4202e-04  1.4387e-05  2.8185e-03  1.0221e-02  0:00:26  129
        22  9.0602e-02  2.8765e-04  3.7312e-04  1.3555e-04  1.3164e-05  2.7168e-03  8.9176e-03  0:00:26  128

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        23  8.9047e-02  2.6503e-04  3.4139e-04  1.2897e-04  1.2028e-05  2.7874e-03  1.0101e-02  0:00:26  127
        24  8.6180e-02  2.4244e-04  3.1270e-04  1.2238e-04  1.1001e-05  2.6837e-03  8.6973e-03  0:00:25  126
        25  8.2060e-02  2.1921e-04  2.8638e-04  1.1510e-04  9.9997e-06  2.7599e-03  9.8999e-03  0:00:25  125
        26  7.6764e-02  1.9802e-04  2.6280e-04  1.0785e-04  9.0747e-06  2.6552e-03  8.4365e-03  0:00:25  124
        27  7.0345e-02  1.7804e-04  2.4076e-04  1.0015e-04  8.1652e-06  2.7369e-03  9.6764e-03  0:00:25  123
        28  6.3199e-02  1.6037e-04  2.2009e-04  9.3063e-05  7.3799e-06  2.6327e-03  8.1930e-03  0:00:24  122
        29  5.6152e-02  1.4466e-04  2.0048e-04  8.6010e-05  6.5721e-06  2.7194e-03  9.4800e-03  0:00:24  121
        30  4.9618e-02  1.3111e-04  1.8300e-04  7.9512e-05  5.8478e-06  2.6164e-03  7.9983e-03  0:00:24  120
        31  4.3855e-02  1.1936e-04  1.6722e-04  7.3449e-05  5.1632e-06  2.7054e-03  9.3279e-03  0:00:24  119
        32  3.9109e-02  1.0923e-04  1.5346e-04  6.8203e-05  4.5469e-06  2.6050e-03  7.8537e-03  0:00:24  118
        33  3.5134e-02  1.0031e-04  1.4079e-04  6.3268e-05  3.9960e-06  2.6967e-03  9.2217e-03  0:00:24  117

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        34  3.1776e-02  9.2654e-05  1.3030e-04  5.9052e-05  3.5139e-06  2.5977e-03  7.7363e-03  0:00:23  116
        35  2.9103e-02  8.5810e-05  1.2113e-04  5.5170e-05  3.0938e-06  2.6936e-03  9.1375e-03  0:00:23  115
        36  2.6836e-02  7.9765e-05  1.1330e-04  5.1706e-05  2.7513e-06  2.5957e-03  7.6219e-03  0:00:23  114
        37  2.4822e-02  7.4075e-05  1.0599e-04  4.8330e-05  2.4433e-06  2.6965e-03  9.0586e-03  0:00:23  113
        38  2.2866e-02  6.8810e-05  9.9730e-05  4.5200e-05  2.1855e-06  2.6054e-03  7.5307e-03  0:00:22  112
        39  2.1000e-02  6.3514e-05  9.3665e-05  4.2060e-05  1.9531e-06  2.7143e-03  9.0666e-03  0:00:22  111
        40  1.9235e-02  5.8556e-05  8.7903e-05  3.9150e-05  1.7516e-06  2.6313e-03  7.5489e-03  0:00:22  110
        41  1.7561e-02  5.3743e-05  8.2129e-05  3.6220e-05  1.5636e-06  2.7524e-03  9.2111e-03  0:00:22  109
        42  1.6087e-02  4.9258e-05  7.6667e-05  3.3533e-05  1.4016e-06  2.6835e-03  7.5676e-03  0:00:22  108
        43  1.4710e-02  4.4868e-05  7.1414e-05  3.0887e-05  1.2497e-06  2.8052e-03  9.3633e-03  0:00:22  107
        44  1.3400e-02  4.0810e-05  6.6601e-05  2.8433e-05  1.1150e-06  2.7128e-03  7.5653e-03  0:00:22  106

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        45  1.2170e-02  3.6866e-05  6.1745e-05  2.6062e-05  9.8556e-07  2.8326e-03  9.4397e-03  0:00:22  105
        46  1.1018e-02  3.3320e-05  5.7150e-05  2.3873e-05  8.7392e-07  2.7263e-03  7.5481e-03  0:00:21  104
        47  1.0013e-02  2.9942e-05  5.2668e-05  2.1729e-05  7.6995e-07  2.8484e-03  9.4800e-03  0:00:21  103
        48  9.0775e-03  2.6942e-05  4.8489e-05  1.9761e-05  6.7862e-07  2.7353e-03  7.5312e-03  0:00:21  102
        49  8.2313e-03  2.4112e-05  4.4450e-05  1.7874e-05  5.9457e-07  2.8586e-03  9.5032e-03  0:00:21  101
        50  7.4954e-03  2.1560e-05  4.0703e-05  1.6152e-05  5.2128e-07  2.7422e-03  7.5196e-03  0:00:20  100
        51  6.7995e-03  1.9188e-05  3.7101e-05  1.4521e-05  4.5344e-07  2.8662e-03  9.5226e-03  0:00:20   99
        52  6.1062e-03  1.7113e-05  3.3783e-05  1.3044e-05  3.9372e-07  2.7480e-03  7.5138e-03  0:00:20   98
        53  5.4903e-03  1.5194e-05  3.0667e-05  1.1667e-05  3.3917e-07  2.8723e-03  9.5422e-03  0:00:20   97
        54  4.9359e-03  1.3504e-05  2.7803e-05  1.0430e-05  2.9280e-07  2.7520e-03  7.5095e-03  0:00:19   96
        55  4.4502e-03  1.1979e-05  2.5170e-05  9.2922e-06  2.5123e-07  2.8765e-03  9.5556e-03  0:00:19   95

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        56  4.0035e-03  1.0644e-05  2.2765e-05  8.2643e-06  2.1605e-07  2.7547e-03  7.5053e-03  0:00:19   94
        57  3.5800e-03  9.4680e-06  2.0609e-05  7.3468e-06  1.8481e-07  2.8794e-03  9.5641e-03  0:00:19   93
        58  3.2020e-03  8.4394e-06  1.8659e-05  6.5312e-06  1.5881e-07  2.7564e-03  7.5016e-03  0:00:19   92
        59  2.8665e-03  7.5486e-06  1.6907e-05  5.8081e-06  1.3625e-07  2.8813e-03  9.5693e-03  0:00:19   91
        60  2.5656e-03  6.7597e-06  1.5300e-05  5.1627e-06  1.1741e-07  2.7575e-03  7.4986e-03  0:00:19   90
        61  2.2859e-03  6.0783e-06  1.3890e-05  4.6003e-06  1.0084e-07  2.8826e-03  9.5726e-03  0:00:22   89
        62  2.0419e-03  5.4669e-06  1.2591e-05  4.0956e-06  8.7064e-08  2.7582e-03  7.4958e-03  0:00:21   88
        63  1.8384e-03  4.9497e-06  1.1465e-05  3.6641e-06  7.5022e-08  2.8834e-03  9.5743e-03  0:00:20   87
        64  1.6528e-03  4.4847e-06  1.0413e-05  3.2665e-06  6.5022e-08  2.7586e-03  7.4928e-03  0:00:20   86
        65  1.4949e-03  4.0954e-06  9.5130e-06  2.9324e-06  5.6289e-08  2.8839e-03  9.5747e-03  0:00:19   85
        66  1.3390e-03  3.7335e-06  8.6551e-06  2.6217e-06  4.9169e-08  2.7588e-03  7.4905e-03  0:00:18   84

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        67  1.2206e-03  3.4407e-06  7.9413e-06  2.3674e-06  4.2989e-08  2.8842e-03  9.5747e-03  0:00:18   83
        68  1.0844e-03  3.1540e-06  7.2568e-06  2.1269e-06  3.7986e-08  2.7589e-03  7.4895e-03  0:00:17   82
        69  9.6986e-04  2.9263e-06  6.7059e-06  1.9379e-06  3.3638e-08  2.8844e-03  9.5754e-03  0:00:17   81
        70  8.7125e-04  2.7007e-06  6.1597e-06  1.7528e-06  3.0197e-08  2.7590e-03  7.4885e-03  0:00:17   80
        71  7.8876e-04  2.5274e-06  5.7333e-06  1.6133e-06  2.7173e-08  2.8845e-03  9.5757e-03  0:00:16   79
        72  7.1853e-04  2.3495e-06  5.2894e-06  1.4705e-06  2.4741e-08  2.7591e-03  7.4876e-03  0:00:16   78
        73  6.5071e-04  2.2161e-06  4.9527e-06  1.3698e-06  2.2607e-08  2.8846e-03  9.5757e-03  0:00:16   77
        74  5.9010e-04  2.0752e-06  4.5900e-06  1.2602e-06  2.0869e-08  2.7591e-03  7.4867e-03  0:00:16   76
        75  5.3635e-04  1.9729e-06  4.3253e-06  1.1892e-06  1.9327e-08  2.8846e-03  9.5756e-03  0:00:16   75
        76  4.9043e-04  1.8602e-06  4.0259e-06  1.1047e-06  1.8061e-08  2.7591e-03  7.4859e-03  0:00:15   74
        77  4.4800e-04  1.7846e-06  3.8216e-06  1.0558e-06  1.6883e-08  2.8847e-03  9.5753e-03  0:00:15   73

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        78  4.1105e-04  1.6933e-06  3.5713e-06  9.8995e-07  1.5877e-08  2.7591e-03  7.4852e-03  0:00:19   72
        79  3.7788e-04  1.6357e-06  3.4089e-06  9.5791e-07  1.4888e-08  2.8847e-03  9.5750e-03  0:00:18   71
        80  3.4731e-04  1.5607e-06  3.1948e-06  9.0573e-07  1.4024e-08  2.7591e-03  7.4846e-03  0:00:17   70
        81  3.2054e-04  1.5168e-06  3.0624e-06  8.8615e-07  1.3168e-08  2.8847e-03  9.5747e-03  0:00:16   69
        82  2.9637e-04  1.4539e-06  2.8740e-06  8.4452e-07  1.2431e-08  2.7591e-03  7.4841e-03  0:00:15   68
        83  2.7479e-04  1.4234e-06  2.7693e-06  8.3345e-07  1.1684e-08  2.8847e-03  9.5743e-03  0:00:15   67
        84  2.6429e-04  1.3712e-06  2.6035e-06  7.9889e-07  1.1039e-08  2.7591e-03  7.4836e-03  0:00:14   66
        85  2.4803e-04  1.3508e-06  2.5192e-06  7.9409e-07  1.0375e-08  2.8847e-03  9.5740e-03  0:00:14   65
        86  2.2803e-04  1.3058e-06  2.3708e-06  7.6465e-07  9.7930e-09  2.7591e-03  7.4832e-03  0:00:14   64
        87  2.2414e-04  1.2963e-06  2.3028e-06  7.6436e-07  9.1899e-09  2.8847e-03  9.5737e-03  0:00:13   63
        88  2.0110e-04  1.2566e-06  2.1690e-06  7.3871e-07  8.6571e-09  2.7591e-03  7.4829e-03  0:00:13   62

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        89  1.8242e-04  1.2469e-06  2.1147e-06  7.4173e-07  8.1024e-09  2.8847e-03  9.5735e-03  0:00:13   61
        90  1.6960e-04  1.2127e-06  1.9927e-06  7.1892e-07  7.6124e-09  2.7591e-03  7.4826e-03  0:00:12   60
        91  1.5902e-04  1.2078e-06  1.9500e-06  7.2410e-07  7.1038e-09  2.8847e-03  9.5733e-03  0:00:12   59
        92  1.5018e-04  1.1774e-06  1.8385e-06  7.0305e-07  6.6558e-09  2.7591e-03  7.4823e-03  0:00:12   58
        93  1.4215e-04  1.1763e-06  1.8063e-06  7.0980e-07  6.2020e-09  2.8847e-03  9.5730e-03  0:00:12   57
        94  1.3440e-04  1.1500e-06  1.7053e-06  6.9017e-07  5.8055e-09  2.7590e-03  7.4821e-03  0:00:12   56
        95  1.2719e-04  1.1519e-06  1.6825e-06  6.9803e-07  5.3933e-09  2.8846e-03  9.5729e-03  0:00:11   55
        96  1.2053e-04  1.1269e-06  1.5884e-06  6.7949e-07  5.0387e-09  2.7590e-03  7.4819e-03  0:00:11   54
        97  1.1428e-04  1.1308e-06  1.5730e-06  6.8819e-07  4.6707e-09  2.8846e-03  9.5727e-03  0:00:11   53
        98  1.0859e-04  1.1075e-06  1.4861e-06  6.7043e-07  4.3548e-09  2.7590e-03  7.4817e-03  0:00:11   52
        99  1.0339e-04  1.1130e-06  1.4775e-06  6.7984e-07  4.0294e-09  2.8846e-03  9.5725e-03  0:00:11   51

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
       100  9.8661e-05  1.0911e-06  1.3969e-06  6.6268e-07  3.7550e-09  2.7590e-03  7.4816e-03  0:00:10   50
       101  9.4167e-05  1.0982e-06  1.3954e-06  6.7265e-07  3.4716e-09  2.8846e-03  9.5724e-03  0:00:10   49
       102  9.0072e-05  1.0775e-06  1.3208e-06  6.5596e-07  3.2345e-09  2.7590e-03  7.4815e-03  0:00:10   48
       103  8.6113e-05  1.0857e-06  1.3251e-06  6.6638e-07  2.9892e-09  2.8846e-03  9.5723e-03  0:00:09   47
       104  8.2559e-05  1.0659e-06  1.2555e-06  6.5013e-07  2.7858e-09  2.7590e-03  7.4813e-03  0:00:09   46
       105  7.9142e-05  1.0750e-06  1.2645e-06  6.6097e-07  2.5741e-09  2.8846e-03  9.5722e-03  0:00:09   45
       106  7.6132e-05  1.0559e-06  1.1992e-06  6.4511e-07  2.4005e-09  2.7590e-03  7.4813e-03  0:00:09   44
       107  7.3225e-05  1.0657e-06  1.2125e-06  6.5631e-07  2.2182e-09  2.8846e-03  9.5721e-03  0:00:09   43
       108  7.0673e-05  1.0472e-06  1.1509e-06  6.4080e-07  2.0710e-09  2.7590e-03  7.4812e-03  0:00:08   42
       109  6.8157e-05  1.0576e-06  1.1677e-06  6.5231e-07  1.9143e-09  2.8846e-03  9.5721e-03  0:00:08   41
       110  6.5941e-05  1.0396e-06  1.1094e-06  6.3709e-07  1.7899e-09  2.7590e-03  7.4811e-03  0:00:08   40

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
       111  6.3738e-05  1.0506e-06  1.1295e-06  6.4887e-07  1.6553e-09  2.8846e-03  9.5720e-03  0:00:08   39
       112  6.1876e-05  1.0331e-06  1.0739e-06  6.3390e-07  1.5500e-09  2.7590e-03  7.4811e-03  0:00:08   38
       113  5.9978e-05  1.0447e-06  1.0967e-06  6.4592e-07  1.4343e-09  2.8846e-03  9.5720e-03  0:00:08   37
       114  5.8399e-05  1.0276e-06  1.0435e-06  6.3118e-07  1.3451e-09  2.7590e-03  7.4810e-03  0:00:07   36
       115  5.6758e-05  1.0395e-06  1.0687e-06  6.4341e-07  1.2453e-09  2.8846e-03  9.5719e-03  0:00:07   35
       116  5.5421e-05  1.0228e-06  1.0175e-06  6.2886e-07  1.1702e-09  2.7590e-03  7.4810e-03  0:00:07   34
       117  5.3980e-05  1.0351e-06  1.0446e-06  6.4126e-07  1.0840e-09  2.8846e-03  9.5719e-03  0:00:07   33
       118  5.2835e-05  1.0187e-06  9.9508e-07  6.2687e-07  1.0205e-09  2.7590e-03  7.4809e-03  0:00:07   32
       119  5.1567e-05  1.0313e-06  1.0238e-06  6.3943e-07  9.4573e-10  2.8846e-03  9.5718e-03  0:00:07   31
       120  5.0598e-05  1.0152e-06  9.7577e-07  6.2517e-07  8.9197e-10  2.7590e-03  7.4809e-03  0:00:06   30
       121  4.9483e-05  1.0280e-06  1.0059e-06  6.3785e-07  8.2701e-10  2.8846e-03  9.5718e-03  0:00:06   29

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
       122  4.8659e-05  1.0121e-06  9.5910e-07  6.2371e-07  7.8153e-10  2.7590e-03  7.4809e-03  0:00:06   28
       123  4.7673e-05  1.0252e-06  9.9046e-07  6.3649e-07  7.2492e-10  2.8846e-03  9.5718e-03  0:00:06   27
       124  4.6974e-05  1.0095e-06  9.4469e-07  6.2245e-07  6.8645e-10  2.7590e-03  7.4808e-03  0:00:05   26
       125  4.6097e-05  1.0228e-06  9.7708e-07  6.3532e-07  6.3694e-10  2.8846e-03  9.5718e-03  0:00:05   25
       126  4.5500e-05  1.0072e-06  9.3220e-07  6.2136e-07  6.0443e-10  2.7590e-03  7.4808e-03  0:00:05   24
       127  4.4714e-05  1.0207e-06  9.6546e-07  6.3430e-07  5.6098e-10  2.8846e-03  9.5718e-03  0:00:05   23
       128  4.4207e-05  1.0053e-06  9.2133e-07  6.2041e-07  5.3349e-10  2.7590e-03  7.4808e-03  0:00:05   22
       129  4.3501e-05  1.0188e-06  9.5534e-07  6.3342e-07  4.9523e-10  2.8846e-03  9.5717e-03  0:00:04   21
       130  4.3069e-05  1.0036e-06  9.1186e-07  6.1959e-07  4.7200e-10  2.7590e-03  7.4808e-03  0:00:04   20
       131  4.2429e-05  1.0172e-06  9.4650e-07  6.3265e-07  4.3818e-10  2.8846e-03  9.5717e-03  0:00:04   19
       132  4.2063e-05  1.0021e-06  9.0358e-07  6.1888e-07  4.1855e-10  2.7590e-03  7.4808e-03  0:00:04   18

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
       133  4.1482e-05  1.0158e-06  9.3877e-07  6.3198e-07  3.8856e-10  2.8846e-03  9.5717e-03  0:00:04   17
       134  4.1174e-05  1.0008e-06  8.9632e-07  6.1825e-07  3.7199e-10  2.7590e-03  7.4808e-03  0:00:03   16
       135  4.0647e-05  1.0146e-06  9.3198e-07  6.3140e-07  3.4530e-10  2.8846e-03  9.5717e-03  0:00:03   15
       136  4.0392e-05  9.9961e-07  8.8994e-07  6.1771e-07  3.3135e-10  2.7590e-03  7.4808e-03  0:00:03   14
       137  3.9908e-05  1.0135e-06  9.2601e-07  6.3089e-07  3.0749e-10  2.8846e-03  9.5717e-03  0:00:03   13
       138  3.9694e-05  9.9861e-07  8.8432e-07  6.1723e-07  2.9577e-10  2.7590e-03  7.4807e-03  0:00:02   12
       139  3.9252e-05  1.0126e-06  9.2074e-07  6.3044e-07  2.7436e-10  2.8846e-03  9.5717e-03  0:00:02   11
       140  3.9079e-05  9.9773e-07  8.7935e-07  6.1681e-07  2.6455e-10  2.7590e-03  7.4807e-03  0:00:02   10
       141  3.8674e-05  1.0118e-06  9.1608e-07  6.3004e-07  2.4525e-10  2.8846e-03  9.5717e-03  0:00:02    9
       142  3.8535e-05  9.9695e-07  8.7496e-07  6.1644e-07  2.3707e-10  2.7590e-03  7.4807e-03  0:00:02    8
       143  3.8161e-05  1.0110e-06  9.1196e-07  6.2969e-07  2.1961e-10  2.8846e-03  9.5717e-03  0:00:01    7

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
       144  3.8053e-05  9.9627e-07  8.7107e-07  6.1612e-07  2.1283e-10  2.7590e-03  7.4807e-03  0:00:01    6
       145  3.7707e-05  1.0104e-06  9.0830e-07  6.2939e-07  1.9697e-10  2.8846e-03  9.5717e-03  0:00:01    5
       146  3.7625e-05  9.9567e-07  8.6761e-07  6.1583e-07  1.9140e-10  2.7590e-03  7.4807e-03  0:00:01    4
       147  3.7303e-05  1.0098e-06  9.0505e-07  6.2911e-07  1.7689e-10  2.8846e-03  9.5717e-03  0:00:01    3
       148  3.7244e-05  9.9513e-07  8.6454e-07  6.1557e-07  1.7239e-10  2.7590e-03  7.4807e-03  0:00:00    2
       149  3.6944e-05  1.0093e-06  9.0215e-07  6.2887e-07  1.5916e-10  2.8846e-03  9.5716e-03  0:00:00    1
       150  3.6905e-05  9.9466e-07  8.6180e-07  6.1535e-07  1.5554e-10  2.7590e-03  7.4807e-03  0:00:00    0

    False



.. GENERATED FROM PYTHON SOURCE LINES 160-161

Create and display velocity vectors on the symmetry-xyplane plane.

.. GENERATED FROM PYTHON SOURCE LINES 161-177

.. code-block:: default


    session.solver.root.results.graphics.vector["velocity_vector_symmetry"] = {}
    session.solver.root.results.graphics.vector["velocity_vector_symmetry"].print_state()
    session.solver.root.results.graphics.vector[
        "velocity_vector_symmetry"
    ].field = "temperature"
    session.solver.root.results.graphics.vector[
        "velocity_vector_symmetry"
    ].surfaces_list = [
        "symmetry-xyplane",
    ]
    session.solver.root.results.graphics.vector[
        "velocity_vector_symmetry"
    ].scale.scale_f = 4
    session.solver.root.results.graphics.vector["velocity_vector_symmetry"].style = "arrow"








.. GENERATED FROM PYTHON SOURCE LINES 178-179

Compute mass flow rate

.. GENERATED FROM PYTHON SOURCE LINES 179-192

.. code-block:: default


    session.solver.root.solution.report_definitions.flux["mass_flow_rate"] = {}
    session.solver.root.solution.report_definitions.flux[
        "mass_flow_rate"
    ].zone_names.get_attr("allowed-values")
    session.solver.root.solution.report_definitions.flux["mass_flow_rate"].zone_names = [
        "cold-inlet",
        "hot-inlet",
        "outlet",
    ]
    session.solver.root.solution.report_definitions.flux["mass_flow_rate"].print_state()
    session.solver.root.solution.report_definitions.compute(report_defs=["mass_flow_rate"])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none



    {'mass_flow_rate': [-2.709270807699227e-09, 0]}



.. GENERATED FROM PYTHON SOURCE LINES 193-194

Close Fluent

.. GENERATED FROM PYTHON SOURCE LINES 194-196

.. code-block:: default


    session.exit()




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

                                 Report Name                Value Unit
                         -------------------  ------------------- -----
                              mass_flow_rate       -2.7092708e-09 [kg/s]





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  57.470 seconds)


.. _sphx_glr_download_examples_00-fluent_mixing_elbow_settings_api.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: mixing_elbow_settings_api.py <mixing_elbow_settings_api.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: mixing_elbow_settings_api.ipynb <mixing_elbow_settings_api.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
